syntax = "proto3";

package productpb;

option go_package = "productpb/";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc AddProduct(AddProductRequest) returns (AddProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  int32 stock = 5;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListProductsResponse {
  repeated GetProductResponse products = 1;
}
